[package]
name = "rustow"
version = "0.5.0-beta"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive", "unicode"] }
regex = "1.9"

[profile.release]
opt-level = 3
lto = true
panic = "abort"
overflow-checks = false
