[package]
name = "rustow"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive", "unicode"] }
regex = "1.10"

[build]
rustflags = ["-C", "target-cpu=native"]

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"
overflow-checks = false
strip = "symbols"
